# rlbox_lfi_sandbox

./: CMakeLists.txt  README.md  TC-aarch64.cmake  meson-aarch64.txt
include/: lfi_callback.h  lfi_ctx_offsets.h  lfi_sepstack_invoker.hpp  rlbox_lfi_sandbox.hpp
src/: incstub.s  lfi_callback.c  main.S  trampoline.S
test/: test_lfi_sandbox_glue.cpp  test_lfi_sandbox_glue_threaded.cpp
